--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -1020,7 +1020,7 @@
     "translation": "CF_NAME login (Benutzernamen und Kennwort für interaktive Anmeldung weglassen -- CF_NAME fordert zur Eingabe beider Angaben auf)"
   },
   {
-    "id": "CF_NAME login --sso [--sso-passcode PASSCODE] (CF_NAME will provide a url to obtain a one-time passcode to login)",
+    "id": "CF_NAME login --sso (CF_NAME will provide a url to obtain a one-time passcode to login)",
     "translation": "CF_NAME login --sso [--sso-passcode PASSCODE] (CF_NAME stellt eine URL zur Verfügung, um ein Einmalkennwort für die Anmeldung abzurufen)"
   },
   {
@@ -1036,11 +1036,11 @@
     "translation": "CF_NAME login -u name@example.com -p pa55woRD (Benutzername und Kennwort als Argumente angeben)"
   },
   {
-    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE]\n\n",
+    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE] [--sso | --sso-passcode PASSCODE]\n\n",
     "translation": ""
   },
   {
-    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE]\\n\\nWARNING:\\n   Providing your password as a command line option is highly discouraged\\n   Your password may be visible to others and may be recorded in your shell history\\n\\nEXAMPLES:\\n   CF_NAME login (omit username and password to login interactively -- CF_NAME will prompt for both)\\n   CF_NAME login -u name@example.com -p pa55woRD (specify username and password as arguments)\\n   CF_NAME login -u name@example.com -p \\\"my password\\\" (use quotes for passwords with a space)\\n   CF_NAME login -u name@example.com -p \\\"\\\\\\\"password\\\\\\\"\\\" (escape quotes if used in password)\\n   CF_NAME login --sso [--sso-passcode PASSCODE] (CF_NAME will provide a url to obtain a one-time password to login)",
+    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE] [--sso | --sso-passcode PASSCODE]\\n\\nWARNING:\\n   Providing your password as a command line option is highly discouraged\\n   Your password may be visible to others and may be recorded in your shell history\\n\\nEXAMPLES:\\n   CF_NAME login (omit username and password to login interactively -- CF_NAME will prompt for both)\\n   CF_NAME login -u name@example.com -p pa55woRD (specify username and password as arguments)\\n   CF_NAME login -u name@example.com -p \\\"my password\\\" (use quotes for passwords with a space)\\n   CF_NAME login -u name@example.com -p \\\"\\\\\\\"password\\\\\\\"\\\" (escape quotes if used in password)\\n   CF_NAME login --sso (CF_NAME will provide a url to obtain a one-time passcode to login)",
     "translation": ""
   },
   {
@@ -4000,10 +4000,6 @@
     "translation": ""
   },
   {
-    "id": "One-time password",
-    "translation": "Einmalkennwort"
-  },
-  {
     "id": "Option '--app-ports'",
     "translation": ""
   },
@@ -5902,10 +5898,6 @@
   {
     "id": "Use '{{.Name}}' to view or set your target org and space",
     "translation": "Verwenden Sie '{{.Name}}', um Ihre Zielorganisation und Ihren Zielbereich anzuzeigen oder festzulegen"
-  },
-  {
-    "id": "Use a one-time password to login",
-    "translation": "Ein Einmalkennwort für die Anmeldung verwenden"
   },
   {
     "id": "User provided tags",
