--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -1020,7 +1020,7 @@
     "translation": "CF_NAME login（省略用户名和密码以通过交互方式登录 - CF_NAME 将提示输入用户名和密码）"
   },
   {
-    "id": "CF_NAME login --sso [--sso-passcode PASSCODE] (CF_NAME will provide a url to obtain a one-time passcode to login)",
+    "id": "CF_NAME login --sso (CF_NAME will provide a url to obtain a one-time passcode to login)",
     "translation": "CF_NAME login --sso [--sso-passcode PASSCODE]（CF_NAME 将提供 URL 用于获取一次性登录密码）"
   },
   {
@@ -1036,11 +1036,11 @@
     "translation": "CF_NAME login -u name@example.com -p pa55woRD（指定用户名和密码作为自变量）"
   },
   {
-    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE]\n\n",
+    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE] [--sso | --sso-passcode PASSCODE]\n\n",
     "translation": ""
   },
   {
-    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE]\\n\\nWARNING:\\n   Providing your password as a command line option is highly discouraged\\n   Your password may be visible to others and may be recorded in your shell history\\n\\nEXAMPLES:\\n   CF_NAME login (omit username and password to login interactively -- CF_NAME will prompt for both)\\n   CF_NAME login -u name@example.com -p pa55woRD (specify username and password as arguments)\\n   CF_NAME login -u name@example.com -p \\\"my password\\\" (use quotes for passwords with a space)\\n   CF_NAME login -u name@example.com -p \\\"\\\\\\\"password\\\\\\\"\\\" (escape quotes if used in password)\\n   CF_NAME login --sso [--sso-passcode PASSCODE] (CF_NAME will provide a url to obtain a one-time password to login)",
+    "id": "CF_NAME login [-a API_URL] [-u USERNAME] [-p PASSWORD] [-o ORG] [-s SPACE] [--sso | --sso-passcode PASSCODE]\\n\\nWARNING:\\n   Providing your password as a command line option is highly discouraged\\n   Your password may be visible to others and may be recorded in your shell history\\n\\nEXAMPLES:\\n   CF_NAME login (omit username and password to login interactively -- CF_NAME will prompt for both)\\n   CF_NAME login -u name@example.com -p pa55woRD (specify username and password as arguments)\\n   CF_NAME login -u name@example.com -p \\\"my password\\\" (use quotes for passwords with a space)\\n   CF_NAME login -u name@example.com -p \\\"\\\\\\\"password\\\\\\\"\\\" (escape quotes if used in password)\\n   CF_NAME login --sso (CF_NAME will provide a url to obtain a one-time passcode to login)",
     "translation": ""
   },
   {
@@ -4000,10 +4000,6 @@
     "translation": ""
   },
   {
-    "id": "One-time password",
-    "translation": ""
-  },
-  {
     "id": "Option '--app-ports'",
     "translation": ""
   },
@@ -5902,10 +5898,6 @@
   {
     "id": "Use '{{.Name}}' to view or set your target org and space",
     "translation": "使用 '{{.Name}}' 可查看或设置目标组织和空间"
-  },
-  {
-    "id": "Use a one-time password to login",
-    "translation": "使用一次性密码登录"
   },
   {
     "id": "User provided tags",
