add support to create isolation segments
- Adding temporary isolation_segment/organizations/spaces resource
routes to info call to complete this series of stories.
- No version checking yet since the API has not been finished

[Finishes #138314101]

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -688,6 +688,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME create-isolation-segment SEGMENT_NAME\\n\\nNOTES:\\n   The isolation segment name must match the placement tag applied to the Diego cell.",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME create-org ORG",
     "translation": ""
   },
@@ -1896,6 +1900,10 @@
     "translation": "App-Manifest für eine App erstellen, die erfolgreich mit einer Push-Operation übertragen wurde"
   },
   {
+    "id": "Create an isolation segment",
+    "translation": ""
+  },
+  {
     "id": "Create an org",
     "translation": "Organisation erstellen"
   },
@@ -1926,6 +1934,10 @@
   {
     "id": "Creating domain {{.DomainName}} for org {{.OrgName}} as {{.Username}}...",
     "translation": "Erstellen von Domäne {{.DomainName}} für Organisation {{.OrgName}} als {{.Username}}..."
+  },
+  {
+    "id": "Creating isolation segment {{.SegmentName}} as {{.CurrentUser}}...",
+    "translation": ""
   },
   {
     "id": "Creating org {{.OrgName}} as {{.Username}}...",
@@ -5301,6 +5313,10 @@
   },
   {
     "id": "The index of the application instance",
+    "translation": ""
+  },
+  {
+    "id": "The isolation segment name",
     "translation": ""
   },
   {
