--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -688,6 +688,10 @@
     "translation": "CF_NAME create-domain ORG DOMINIO"
   },
   {
+    "id": "CF_NAME create-isolation-segment SEGMENT_NAME\\n\\nNOTES:\\n   The isolation segment name must match the placement tag applied to the Diego cell.",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME create-org ORG",
     "translation": ""
   },
@@ -1896,6 +1900,10 @@
     "translation": "Crea un manifest di applicazione per un'applicazione distribuita correttamente"
   },
   {
+    "id": "Create an isolation segment",
+    "translation": ""
+  },
+  {
     "id": "Create an org",
     "translation": "Crea un'organizzazione"
   },
@@ -1926,6 +1934,10 @@
   {
     "id": "Creating domain {{.DomainName}} for org {{.OrgName}} as {{.Username}}...",
     "translation": "Creazione del dominio {{.DomainName}} per l'organizzazione {{.OrgName}} come {{.Username}} in corso..."
+  },
+  {
+    "id": "Creating isolation segment {{.SegmentName}} as {{.CurrentUser}}...",
+    "translation": ""
   },
   {
     "id": "Creating org {{.OrgName}} as {{.Username}}...",
@@ -5301,6 +5313,10 @@
   },
   {
     "id": "The index of the application instance",
+    "translation": ""
+  },
+  {
+    "id": "The isolation segment name",
     "translation": ""
   },
   {
