fixed text prompt translations
Signed-off-by: Alex Melnik <aleksandr.s.melnik@hpe.com>

--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -4408,6 +4408,10 @@
     "translation": "Really delete orphaned routes?{{.Prompt}}"
   },
   {
+    "id": "Really delete the org {{.OrgName}} and everything associated with it?",
+    "translation": ""
+  },
+  {
     "id": "Really delete the {{.ModelType}} {{.ModelName}} and everything associated with it?",
     "translation": "Really delete the {{.ModelType}} {{.ModelName}} and everything associated with it?"
   },
