--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -4408,6 +4408,10 @@
     "translation": "Sollen verwaiste Routen wirklich gelöscht werden?{{.Prompt}}"
   },
   {
+    "id": "Really delete the org {{.OrgName}} and everything associated with it?",
+    "translation": ""
+  },
+  {
     "id": "Really delete the {{.ModelType}} {{.ModelName}} and everything associated with it?",
     "translation": "Soll {{.ModelType}} {{.ModelName}} und alle zugehörigen Elemente wirklich gelöscht werden?"
   },
