--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -4408,6 +4408,10 @@
     "translation": "¿Desea realmente suprimir las rutas huérfanas?{{.Prompt}}"
   },
   {
+    "id": "Really delete the org {{.OrgName}} and everything associated with it?",
+    "translation": ""
+  },
+  {
     "id": "Really delete the {{.ModelType}} {{.ModelName}} and everything associated with it?",
     "translation": "¿Desea realmente suprimir el {{.ModelType}} {{.ModelName}} y todo lo asociado con él?"
   },
