--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -852,6 +852,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME delete-isolation-segment SEGMENT_NAME",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME delete-org ORG [-f]",
     "translation": ""
   },
@@ -2132,6 +2136,10 @@
     "translation": "删除应用程序"
   },
   {
+    "id": "Delete an isolation segment",
+    "translation": ""
+  },
+  {
     "id": "Delete an org",
     "translation": "删除组织"
   },
@@ -2158,6 +2166,10 @@
   {
     "id": "Deleting domain {{.DomainName}} as {{.Username}}...",
     "translation": "正在以 {{.Username}} 身份删除域 {{.DomainName}}..."
+  },
+  {
+    "id": "Deleting isolation segment {{.SegmentName}} as {{.CurrentUser}}...",
+    "translation": ""
   },
   {
     "id": "Deleting key {{.ServiceKeyName}} for service instance {{.ServiceInstanceName}} as {{.CurrentUser}}...",
@@ -3164,6 +3176,10 @@
     "translation": ""
   },
   {
+    "id": "ISOLATION SEGMENTS:",
+    "translation": ""
+  },
+  {
     "id": "Ignore manifest file",
     "translation": "忽略清单文件"
   },
@@ -3542,6 +3558,10 @@
   {
     "id": "Invite and manage users, select and change plans, and set spending limits\n",
     "translation": "邀请和管理用户，选择和更改套餐，以及设置支出限制\n"
+  },
+  {
+    "id": "Isolation segment {{.IsolationSegmentName}} does not exist.",
+    "translation": ""
   },
   {
     "id": "Job ({{.JobGUID}}) failed: {{.Message}}",
@@ -4406,6 +4426,10 @@
   {
     "id": "Really delete orphaned routes?{{.Prompt}}",
     "translation": "真的要删除孤立的路径吗？{{.Prompt}}"
+  },
+  {
+    "id": "Really delete the isolation segment {{.IsolationSegmentName}}?",
+    "translation": ""
   },
   {
     "id": "Really delete the org {{.OrgName}} and everything associated with it?",
@@ -6170,6 +6194,10 @@
   {
     "id": "crashing",
     "translation": "崩溃"
+  },
+  {
+    "id": "delete-isolation-segment",
+    "translation": ""
   },
   {
     "id": "description",
