--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -1292,6 +1292,10 @@
     "translation": "Invalid flag: "
   },
   {
+    "id": "Isolation segment {{.IsolationSegmentName}} already exists.",
+    "translation": ""
+  },
+  {
     "id": "Isolation segment {{.IsolationSegmentName}} does not exist.",
     "translation": ""
   },
@@ -1978,6 +1982,10 @@
   {
     "id": "cf target -s",
     "translation": "cf target -s"
+  },
+  {
+    "id": "create-isolation-segment",
+    "translation": ""
   },
   {
     "id": "delete-isolation-segment",
