translations for bind-security-group
- kept Assigning security group {{.security_group}} in the old form so
we don't have to wait to re-generate translation (text, though not param
casing, is the same as pre-refactor)

[#126256825]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -4836,6 +4836,10 @@
     "translation": "Sicherheitsgruppen:"
   },
   {
+    "id": "Security group '{{.Name}}' not found.",
+    "translation": ""
+  },
+  {
     "id": "Security group {{.security_group}} does not exist",
     "translation": "Sicherheitsgruppe {{.security_group}} ist nicht vorhanden"
   },
